Fixing social buttons width on mobile devices

--- a/_sass/rrssb.scss
+++ b/_sass/rrssb.scss
@@ -94,7 +94,7 @@ $social-list: (
   height: 36px;
   margin: 0;
   padding: 0;
-  width: 100%;
+  width: 70%;
 
   li {
     @extend %border-box;
